hphp/test/zend/good/tests-classes/class_abstract.php.exp
base
HipHop Fatal error: Cannot instantiate abstract class base in hphp/test/zend/good/tests-classes/class_abstract.php on line 15
